[gd_scene load_steps=4 format=2]

[ext_resource path="res://Map_old.gd" type="Script" id=1]
[ext_resource path="res://img/not_visible.png" type="Texture" id=2]
[ext_resource path="res://img/debug.png" type="Texture" id=3]

[node name="MemoryMaze" type="Node2D"]
script = ExtResource( 1 )

[node name="DebugObject" type="Sprite" parent="."]
visible = false
z_index = 2
z_as_relative = false
texture = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="vision_update_time" type="Label" parent="CanvasLayer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
text = "vision update time"

[node name="FPS" type="Label" parent="CanvasLayer"]
margin_left = 10.0
margin_top = 24.0
margin_right = 50.0
margin_bottom = 38.0
text = "fps"

[node name="vision_update" type="Label" parent="CanvasLayer"]
margin_left = 10.0
margin_top = 40.0
margin_right = 50.0
margin_bottom = 54.0
text = "vision update: true"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -1

[node name="Sprite" type="Sprite" parent="CanvasLayer2"]
modulate = Color( 0.823529, 0.815686, 0.858824, 1 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 800, 600 )
